Improvement and error findings.

--- a/aide/aide.conf
+++ b/aide/aide.conf
@@ -3,9 +3,9 @@
 # AIDE conf
 
 # The daily cron job depends on these paths
-database_in=file:/var/lib/aide/aide.db
-database_out=file:/var/lib/aide/aide.db.new
-database_new=file:/var/lib/aide/aide.db.new
+database_in=file:~/aide/aide.db
+database_out=file:~/aide/aide.db.new
+database_new=file:~/aide/aide.db.new
 gzip_dbout=yes
 
 NORMAL = R+b+sha1
